syntax = "proto3";
package models;

option go_package = "grpc-demo/models/models";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service Greeter {
    rpc SayHiToServer (SayHiToServerRequest) returns (SayHiToServerResponse) {
        option (google.api.http) = {
            post: "/greeter/sayhitoserver"
            body: "*"
        };
    }
}

message SayHiToServerRequest {
    string name = 1;
}

message SayHiToServerResponse {
    repeated string greetings = 1;
    google.protobuf.Timestamp time = 2;
    int32 luck = 3;
}
